Updated Setter in NewlecExam and bean set

--- a/.gitignore
+++ b/.gitignore
@@ -238,4 +238,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### Maven ###
+target/
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij,windows,java,eclipse
